tests/baselines/reference/parserWithStatement1.d.errors.txt
parserWithStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserWithStatement1.d.ts(1,1): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
parserWithStatement1.d.ts(1,7): error TS2304: Cannot find name 'foo'.


==== parserWithStatement1.d.ts (3 errors) ====
    with (foo) {
    ~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    ~~~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
          ~~~
!!! error TS2304: Cannot find name 'foo'.
    }